--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ footer {
     border-top: 1px solid var(--border-color);
 }
 
+/* easter eggs */
 .contact-heading {
     width: fit-content;
     margin: 0 auto;
